prevent button text from wrapping

--- a/client/my-sites/plugins/plugins-discovery-page/style.scss
+++ b/client/my-sites/plugins/plugins-discovery-page/style.scss
@@ -18,12 +18,6 @@
 		background-color: #0675c4;
 	}
 
-	.banner__action {
-		@include break-mobile {
-			display: flex;
-		}
-	}
-
 	.banner__action .button {
 		background-color: #0675c4;
 		font-weight: 400;
@@ -31,16 +25,19 @@
 		padding: 8px 14px;
 		font-size: 0.875rem;
 		line-height: 22px;
+		white-space: nowrap;
 	}
 
 	.banner__action .button:not(:first-child) {
-		margin-top: 15px;
 		background-color: var(--color-surface);
 		border: 1px solid var(--color-neutral-10);
+		margin-left: 12px;
+		margin-top: 0;
 
-		@include break-mobile {
-			margin-left: 12px;
-			margin-top: 0;
+		@include breakpoint-deprecated( "<480px" ) {
+			width: 100%;
+			margin-top: 12px;
+			margin-left: 0;
 		}
 	}
 }
